--- a/public/style.css
+++ b/public/style.css
@@ -4,10 +4,11 @@ html, body, #root{
     height: 100%;
 }
 
-#main, .page{
+#main, .page {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 #page-0 {
@@ -18,17 +19,24 @@ html, body, #root{
     background-image: linear-gradient(195deg, rgb(247, 133, 250), rgb(94, 36, 102));
 }
 
+#page-2 {
+    background-image: linear-gradient(165deg, rgb(94, 36, 102), rgb(247, 133, 250));
+}
+
+#page-3 {
+    background-image: linear-gradient(195deg, rgb(247, 133, 250), rgb(94, 36, 102));
+}
+
 .page {
     height: 100vh;
     width: 100%;
-    justify-content: center;
 }
 
 h1 {
     margin-top: 0px;
 }
 
-p, h1, h2, h3, h4 {
+p, h1, h2, h3, h4, label {
     font-family: "Tahoma", "Geneva", "sans-serif";
     color: rgb(49, 19, 53)
 }
@@ -52,5 +60,28 @@ a {
     color: rgb(218, 39, 215);
     text-decoration: none;
     text-shadow: 1px 1px rgb(49, 19, 53);
+}
 
+.image-box > img {
+    height: 200px;
+}
+
+#project-boxes {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-height: 800px;
+    width: 1040px;
+}
+
+.project-box {
+    margin: 10px;
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.project-box > h2 {
+    margin: 0px;
 }
