--- a/public/style.css
+++ b/public/style.css
@@ -62,11 +62,14 @@ a {
     text-shadow: 1px 1px rgb(49, 19, 53);
 }
 
-.image-box > img {
-    height: 200px;
+.image-box > a > img {
+    height: 198px;
+    border: 1px solid rgb(247, 133, 250);
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
-#project-boxes {
+#project-boxes, #goal-boxes, #about-boxes {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -74,7 +77,7 @@ a {
     width: 1040px;
 }
 
-.project-box {
+.project-box, .goal-box, .about-box {
     margin: 10px;
     width: 500px;
     display: flex;
@@ -82,6 +85,12 @@ a {
     align-items: center;
 }
 
-.project-box > h2 {
+.project-box > h2, .goal-box > h2, .about-box > h2 {
     margin: 0px;
+}
+
+hr {
+    color: black;
+    width: 100vw;
+    height: 2px;
 }
