--- a/src/style.css
+++ b/src/style.css
@@ -11,22 +11,6 @@ html, body, #root{
     justify-content: center;
 }
 
-/* #page-0 {
-    background-image: linear-gradient(to bottom, rgb(94, 36, 102), rgb(247, 133, 250));
-}
-
-#page-1 {
-    background-image: linear-gradient(to bottom, rgb(247, 133, 250), rgb(94, 36, 102));
-}
-
-#page-2 {
-    background-image: linear-gradient(to bottom, rgb(94, 36, 102), rgb(247, 133, 250));
-}
-
-#page-3 {
-    background-image: linear-gradient(to bottom, rgb(247, 133, 250), rgb(94, 36, 102));
-} */
-
 .page {
     min-height: 100vh;
     width: 100%;
@@ -34,13 +18,8 @@ html, body, #root{
 
 p, h1, h2, h3, h4, label {
     font-family: "Tahoma", "Arial", "sans-serif";
-    /* color: rgb(49, 19, 53); */
     text-align: justify;
 }
-
-/* h1, h2, h3, h4 {
-    text-shadow: 1px 1px rgb(247, 133, 250);
-} */
 
 .break-bar {
     display: flex;
@@ -54,14 +33,11 @@ p, h1, h2, h3, h4, label {
 }
 
 a {
-    /* color: rgb(218, 39, 215); */
     text-decoration: none;
-    /* text-shadow: 1px 1px rgb(49, 19, 53); */
 }
 
 .image-box > a > img, .image-box > img {
     max-height: 198px;
-    /* border: 1px solid rgb(247, 133, 250); */
     margin-left: 5px;
     margin-right: 5px;
 }
@@ -93,7 +69,6 @@ a {
     height: 300px;
     width: 300px;
     border-radius: 50%;
-    /* border: 1px solid rgb(247, 133, 250); */
 }
 
 @media screen and (max-width: 1040px) {
@@ -146,5 +121,9 @@ a {
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .image-box > img:nth-child(2) {
+        margin-top: 5px;
     }
 }
