--- a/src/style.css
+++ b/src/style.css
@@ -116,6 +116,10 @@ a {
     }
 }
 
+.bb-text {
+    cursor: pointer;
+}
+
 @media screen and (max-width: 533px) {
     .image-box {
         display: flex;
